<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_history_edu_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/baseline_bar_chart_24"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_gift"
            android:icon="@drawable/baseline_card_giftcard_24"
            android:title="@string/menu_gift" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/baseline_help_outline_24"
            android:title="@string/rubbish_guide" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/baseline_notifications_none_24"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/baseline_local_phone_24"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/baseline_contact_support_24"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>