<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.btl_android.ui.waste_owner.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"

        >
        <action
            android:id="@+id/action_nav_home_to_detail_material"
            app:destination="@id/detail_material" />
        <action
            android:id="@+id/action_homeFragment_to_giftFragment"
            app:destination="@id/nav_gift" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.btl_android.ui.waste_owner.order.OrderHistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_order_history" >

        <action
            android:id="@+id/fragment_container"
            app:destination="@id/detailSchedule" />


    </fragment>

    <fragment
        android:id="@+id/nav_gift"
        android:name="com.example.btl_android.ui.waste_owner.gift.GiftFragment"
        android:label="@string/menu_gift"
        tools:layout="@layout/fragment_gift" />
    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.btl_android.ui.waste_owner.Test.TestFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_test" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.btl_android.ui.waste_owner.Test.TestFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_test" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.btl_android.ui.profile.ProfileFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/detail_material"
        android:name="com.example.btl_android.ui.waste_owner.Material.MaterialDetailFragment"
        android:label="@string/detail_material"
        tools:layout="@layout/fragment_material_detail" />
    <fragment
        android:id="@+id/Schedule"
        android:name="com.example.btl_android.ui.waste_owner.Schedule.ScheduleFragment"
        android:label="@string/Schedule"
        tools:layout="@layout/fragment_schedule" >
        <action
            android:id="@+id/action_scheduleFragment_to_selectLocationFragment"
            app:destination="@id/mapFragment" />
    </fragment>

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.btl_android.ui.waste_owner.Schedule.SelectLocationFragment"
        android:label="@string/Schedule"
        tools:layout="@layout/fragment_select_location" />

    <fragment
        android:id="@+id/detailSchedule"
        android:name="com.example.btl_android.ui.waste_owner.order.OrderDetailFragment"
        android:label="@string/ScheduleDetail"
        tools:layout="@layout/fragment_order_detail" />

    <fragment
        android:id="@+id/nav_collector_home"
        android:name="com.example.btl_android.ui.collector.AvailableRequestsFragment"
        android:label="Đơn chờ"
        tools:layout="@layout/fragment_available_requests" />



    <fragment
        android:id="@+id/nav_collector_route"
        android:name="com.example.btl_android.ui.collector.thugom.AcceptedRequestsFragment"
        android:label="Lộ trình"
        tools:layout="@layout/fragment_accepted_requests" >
        <action android:id="@+id/action_accepted_to_collectDetail"
            app:destination="@+id/collector_detail"
            />
    </fragment>

    <fragment
        android:id="@+id/collector_detail_request"
        android:name="com.example.btl_android.ui.collector.RequestDetailFragment"
        android:label="Chi tiết"
        tools:layout="@layout/fragment_request_detail" />

    <fragment
        android:id="@+id/action_accepted_to_map"
        android:name="com.example.btl_android.ui.collector.RouteFragment"
        android:label="Lộ trình"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/conllector_dashboard"
        android:name="com.example.btl_android.ui.collector.DashboardFragment"
        android:label="Thống kê"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/collector_detail"
        android:name="com.example.btl_android.ui.collector.thugom.CollectDetailFragment"
        android:label="Thu gom rác tái chế"
        tools:layout="@layout/fragment_collect_detail" />
</navigation>